--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -736,16 +736,6 @@ tx_ultimate_touch:
     - binary_sensor.template.publish:
         id: multi_touch
         state: ON
-    - light.turn_on:
-        id: leds_top
-        brightness: 90%
-        red: !lambda "return id(multi_touch_color)[0]/100.0;"
-        green: !lambda "return id(multi_touch_color)[1]/100.0;"
-        blue: !lambda "return id(multi_touch_color)[2]/100.0;"
-        effect: ${multi_touch_effect}
-    - delay: 1.4s
-    - light.turn_off:
-        id: leds_top
     - lambda: |-
         ESP_LOGD("button", "Multi Touch Release");
 
@@ -1330,28 +1320,28 @@ script:
           id: set_bar_height
           button: 0
           height: 0
-# This is more cheesy than cool
-#     - light.turn_on:
-#         id: leds_top
-#         brightness: ${multi_touch_brightness}
-#         red: !lambda "return id(multi_touch_color)[0]/100.0;"
-#         green: !lambda "return id(multi_touch_color)[1]/100.0;"
-#         blue:  !lambda "return id(multi_touch_color)[2]/100.0;"
-#         effect: ${multi_touch_effect}
-      - script.execute:
-          id: dim_led_at_button_1
-          is_long_press: false
-      - script.execute:
-          id: dim_led_at_button_2
-          is_long_press: false
-      - script.execute:
-          id: dim_led_at_button_3
-          is_long_press: false
-      - script.execute:
-          id: dim_led_at_button_4
-          is_long_press: false
-#     - delay: 5s
-#     - light.turn_off: leds_top
+# This is more cheesy than cool?
+     - light.turn_on:
+         id: leds_top
+         brightness: ${multi_touch_brightness}
+         red: !lambda "return id(multi_touch_color)[0]/100.0;"
+         green: !lambda "return id(multi_touch_color)[1]/100.0;"
+         blue:  !lambda "return id(multi_touch_color)[2]/100.0;"
+         effect: ${multi_touch_effect}
+      - delay: 1.5s
+      - light.turn_off: leds_top
+#     - script.execute:
+#         id: dim_led_at_button_1
+#         is_long_press: false
+#     - script.execute:
+#         id: dim_led_at_button_2
+#         is_long_press: false
+#     - script.execute:
+#         id: dim_led_at_button_3
+#         is_long_press: false
+#     - script.execute:
+#         id: dim_led_at_button_4
+#         is_long_press: false
 
   - id: led_on_long_touch
     mode: restart
