--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -28,7 +28,6 @@ substitutions:
   longitude: "5.654321°"
 
   touch_color: "{0,100,100}"
-  touch_effect: "Scan"
 
   long_hold_uses_bars: "true"
   bar_delay: 300ms
@@ -534,14 +533,14 @@ light:
     id: leds
     default_transition_length: 0s
     effects:
-#     - addressable_rainbow:
-#         name: "Rainbow"
-#         speed: 3
-#         width: 8
-#     - pulse:
-#         name: "Pulse"
-#         transition_length: 1.4s
-#         update_interval: 100ms
+      - addressable_rainbow:
+          name: "Rainbow"
+          speed: 3
+          width: 8
+      - pulse:
+          name: "Pulse"
+          transition_length: 1.4s
+          update_interval: 100ms
       - addressable_flicker:
           name: "Flicker"
 
@@ -587,12 +586,12 @@ light:
         from: 20
         to: 26
     effects:
-#     - addressable_scan:
-#         name: "Scan"
-#     - addressable_rainbow:
-#         name: "Rainbow"
-#         speed: 100
-#         width: 20
+      - addressable_scan:
+          name: "Scan"
+      - addressable_rainbow:
+          name: "Rainbow"
+          speed: 100
+          width: 20
       - addressable_flicker:
           name: "Flicker"
 
@@ -1347,6 +1346,7 @@ script:
           id: dim_led_at_button_4
           is_long_press: false
 
+# TODO: do I want to remove this?
   - id: led_on_long_touch
     mode: restart
     then:
