--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -541,6 +541,7 @@ light:
           name: "Pulse"
           transition_length: 1.4s
           update_interval: 100ms
+# Flicker doesn't appear to do anything
       - addressable_flicker:
           name: "Flicker"
 
@@ -592,6 +593,7 @@ light:
           name: "Rainbow"
           speed: 100
           width: 20
+# Flicker doesn't appear to do anything
       - addressable_flicker:
           name: "Flicker"
 
@@ -1324,15 +1326,15 @@ script:
           button: 0
           height: 0
 # This is more cheesy than cool?
-      - light.turn_on:
-          id: leds_top
-          brightness: ${multi_touch_brightness}
-          red: !lambda "return id(multi_touch_color)[0]/100.0;"
-          green: !lambda "return id(multi_touch_color)[1]/100.0;"
-          blue:  !lambda "return id(multi_touch_color)[2]/100.0;"
-          effect: ${multi_touch_effect}
-      - delay: 2.0s
-      - light.turn_off: leds_top
+#     - light.turn_on:
+#         id: leds_top
+#         brightness: ${multi_touch_brightness}
+#         red: !lambda "return id(multi_touch_color)[0]/100.0;"
+#         green: !lambda "return id(multi_touch_color)[1]/100.0;"
+#         blue:  !lambda "return id(multi_touch_color)[2]/100.0;"
+#         effect: ${multi_touch_effect}
+#     - delay: 2.0s
+#     - light.turn_off: leds_top
       - script.execute:
           id: dim_led_at_button_1
           is_long_press: false
